# rust-wasm-snes

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: ship-initialized
.github/workflows/: bench.yml  deploy.yml
bench/: README.md
docs/: OPEN_TASKS.md  T10_IDLE_LOOP_DETECTION.md
src/: apu.rs  bus.rs  dma.rs  joypad.rs  lib.rs  main.rs  rom.rs  snapshot.rs  spc.rs
src/cpu/: addressing.rs  instructions.rs  mod.rs  tables.rs
src/ppu/: color.rs  mod.rs  render.rs
src/spc700/: cpu.rs  dsp.rs  mod.rs  timers.rs
web/: emulator-worker.js  index-phase-b.html  index.html  serve.py
