[package]
name = "zelda-a-link-to-the-past"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "KeyboardEvent",
    "console",
    "Performance",
]

[[bin]]
name = "spc_player"
path = "src/bin/spc_player.rs"

[[bin]]
name = "debug_tm"
path = "src/bin/debug_tm.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[features]
trace = []
vram-trace = []
cpu-trace = []
# Idle-loop fast path (T10). Detects the canonical LDA→BEQ polling shape and
# fast-forwards the CPU to the next scanline boundary. CPU semantics are
# preserved; audio has a known residual divergence under investigation.
# Off by default — the determinism contract on main is computed with this
# feature disabled. See docs/T10_IDLE_LOOP_DETECTION.md.
idle-skip = []

[[bin]]
name = "snapshot_test"
path = "src/bin/snapshot_test.rs"

[profile.release]
opt-level = 3
lto = "thin"
